src/styles/app.css
/* ... */
.post-card-subhead-left {
    display: flex;
    align-items: center;
}

.post-card-subhead-right {
    display: flex;
    flex-direction: column;
}

.post-card-footer {
    display: flex;
    align-items: center;
    justify-content: space-between;
    color: var(--color-secondary);
    margin: 20px 0;
}

.post-card-footer-left {
    display: flex;
    align-items: center;
}

.post-card-footer-right {
    display: flex;
    flex-direction: column;
}

/* Tag Archives
/* ---------------------------------------------------------- */

.tag-header {
    max-width: 690px;
    margin: 0 0 4vw;
}

.tag-header h1 {
    margin: 0 0 1rem 0;
}

.tag-header p {
    margin: 0;
    color: var(--color-secondary);
    font-size: 2.2rem;
    line-height: 1.3em;
}

@media (max-width: 500px) {
    .tag-header {
        border-bottom: var(--color-bg) 1px solid;
        padding-bottom: 4vw;
    }
    .tag-header p {
        font-size: 1.7rem;
    }
}


/* Author Archives
/* ---------------------------------------------------------- */

.author-header {
    display: flex;
    justify-content: space-between;
    margin: 0 0 4vw;
}

.author-header h1 {
    margin: 0 0 1rem 0;
}

.author-header p {
    margin: 0;
    color: var(--color-secondary);
    font-size: 2.2rem;
    line-height: 1.3em;
}

.author-header-image {
    flex: 0 0 auto;
    margin: 0 4vw 0 0;
    height: 120px;
    width: 120px;
    border-radius: 100%;
    overflow: hidden;
}

.author-header-content {
    overflow: auto;
}

.author-header-meta {
    display: flex;
    margin: 1rem 0 0 0;
}

.author-header-item {
    display: block;
    padding: 2px 10px;
}

.author-header-item:first-child {
    padding-left: 0;
}

@media (max-width: 500px) {
    .author-header {
        border-bottom: var(--color-bg) 1px solid;
        padding-bottom: 4vw;
    }
    .author-header p {
        font-size: 1.7rem;
    }
    .author-header-image {
        height: 80px;
        width: 80px;
    }
}


/* Pagination
/* ---------------------------------------------------------- */

.pagination {
    position: relative;
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 4vw 0 0;
}

.pagination a {
    display: inline-block;
    padding: 10px 15px;
    border: var(--color-border) 1px solid;
    color: var(--color-secondary);
    text-decoration: none;
    font-size: 1.4rem;
    line-height: 1em;
    border-radius: var(--radius);
}

.pagination-location {
    position: absolute;
    left: 50%;
    width: 100px;
    margin-left: -50px;
    text-align: center;
    color: var(--color-secondary);
    font-size: 1.3rem;
}


/* Footer
/* ---------------------------------------------------------- */

.site-foot {
    padding: 20px 0 40px 0;
    color: rgba(255,255,255,0.7);
    font-family: monospace;
    font-size: 2rem;
    background: var(--color-base);
}

.site-foot-nav {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.site-foot-nav a {
    color: rgba(255,255,255,0.7);
}

.site-foot-nav a:hover {
    text-decoration: none;
    color: rgba(255,255,255,1);
}

.site-foot-nav-right a {
    display: inline-block;
    padding: 2px 5px;
}

.site-foot-nav-right a:last-child {
    padding-right: 0;
}


/* Koenig Styles
/* ---------------------------------------------------------- */

.kg-bookmark-card {
    width: 100%;
    margin-top: 0;
}

.kg-bookmark-container {
    display: flex;
    min-height: 148px;
    color: var(--color-base);
    font-family: var(--font-sans-serif);
    text-decoration: none;
    border-radius: 3px;
    box-shadow: 0 2px 5px -1px rgba(0, 0, 0, 0.15), 0 0 1px rgba(0, 0, 0, 0.09);
}

.kg-bookmark-container:hover {
    color: var(--color-base);
    text-decoration: none;
    box-shadow: 0 2px 5px -1px rgba(0, 0, 0, 0.15), 0 0 1px rgba(0, 0, 0, 0.09);
}

.kg-bookmark-content {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    padding: 20px;
}

.kg-bookmark-title {
    color: color(var(--color-secondary) l(-30%));
    font-size: 1.6rem;
    line-height: 1.5em;
    font-weight: 600;
    transition: color 0.2s ease-in-out;
}

.kg-bookmark-container:hover .kg-bookmark-title {
    color: var(--color-primary);
}

.kg-bookmark-description {
    display: -webkit-box;
    overflow-y: hidden;
    margin-top: 12px;
    max-height: 48px;
    color: color(var(--color-secondary) l(-10%));
    font-size: 1.5rem;
    line-height: 1.5em;
    font-weight: 400;

    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
}

.kg-bookmark-thumbnail {
    position: relative;
    min-width: 33%;
    max-height: 100%;
}

.kg-bookmark-thumbnail img {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    border-radius: 0 3px 3px 0;

    object-fit: cover;
}

.kg-bookmark-metadata {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    margin-top: 14px;
    color: color(var(--color-secondary) l(-10%));
    font-size: 1.5rem;
    font-weight: 400;
}

.kg-bookmark-icon {
    margin-right: 8px;
    width: 22px;
    height: 22px;
}

.kg-bookmark-author {
    line-height: 1.5em;
}

.kg-bookmark-author:after {
    content: "•";
    margin: 0 6px;
}

.kg-bookmark-publisher {
    overflow: hidden;
    max-width: 240px;
    line-height: 1.5em;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.kg-embed-card iframe {
    position: static !important;
    display: block;
    margin: 0 auto;
}
/* ... */

